--- a/my-project2/frontend/src/app/component/member/closet/closet.component.html
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.html
@@ -8,7 +8,7 @@
           <button (click)="next(postIndex, post.imagePaths.length)">></button>
         </div>
         <!-- Post title -->
-        <h2 class="title1">{{ post.title }}</h2>
+        <h2 class="title1"><br>{{ post.title }}</h2>
         <div class="button-group">
           <button (click)="openUpdateForm(post)">수정</button>
           <button (click)="deletePost(post.id)">삭제</button>
