--- a/my-project2/frontend/src/app/component/member/signin/signin.component.html
+++ b/my-project2/frontend/src/app/component/member/signin/signin.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <mat-card>
+  <mat-card style="width: 2000px; height: 500px;">
     <mat-card-title>AvatarS - 로그인</mat-card-title>
     <mat-card-content>
       <form [formGroup]="signInForm" (ngSubmit)="submit()">
