--- a/my-project2/frontend/src/app/component/community/post/post.component.css
+++ b/my-project2/frontend/src/app/component/community/post/post.component.css
@@ -1,6 +1,17 @@
 .container{
   margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items:center;
+}
+
 
 .h1{
   text-align: center;
