--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -13,6 +13,9 @@
   background-color: white;
   min-height: 100vh;
   overflow-y: auto;
+  width: 100%;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 
@@ -34,12 +37,12 @@ a{
 
 
 .TopNav{
-
   text-align: left;
   top:0;
   height: 6vh;
   max-height: 60px;
   border-bottom: solid 4px black;
+  display: flex;
 
 }
 
@@ -120,4 +123,49 @@ footer{
   display: none;
 }
 
+.search-box {
+  width: 100%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin-top: 7px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
+.search {
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.searchInput {
+  width: 100%;
+  /*width: 1000px;*/
+  height: 30px;
+  font-size: 18px;
+  border: none;
+  border-bottom: 1px black solid;
+}
+
+.search button {
+  font-size: 18px;
+  border: none;
+  background-color: black;
+  width: 50px;
+  height: 30px;
+  border-radius: 15px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.search button:hover {
+  font-size: 18px;
+  border: none;
+  background-color: white;
+  width: 50px;
+  height: 30px;
+  border-radius: 15px;
+  color: #fff;
+  cursor: pointer;
+}
