--- a/my-project2/frontend/src/app/component/home.component.html
+++ b/my-project2/frontend/src/app/component/home.component.html
@@ -24,7 +24,7 @@
     <ng-container *ngFor="let post of posts; let postIndex = index">
       <div class="post">
         <div class="imgContainer">
-          <img [src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="postImg"/>
+          <img (click)="goToPost(post.id)"[src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="postImg"/>
         </div>
         <h5 class="postName">{{ post.username }}</h5>
         <h7 class="postText">{{ post.title }}</h7>
