--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.css
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.css
@@ -5,10 +5,42 @@
   height: 100%;
 }
 
+.container{
+  display: flex;
+}
+
+.fitting-box{
+  flex:1;
+  width: 50%;
+
+}
+
+
+.image{
+  position:relative;
+  left: 0;
+  top:0;
+  padding-bottom: 130%;
+}
+
+
+.preview{
+  position:absolute;
+  top:0;
+  left: 0;
+  padding: 10px;
+  border-radius: 11%;
+  width: 100%; 
+  height: 100%;
+  object-fit: fill;
+  min-width: 270px; 
+  min-height: 270px;
+
+}
 
 
 .title{
-  font-size: large;
+  font-size: 24px;
   text-align: center;
   font-weight: bold;
 }
@@ -32,7 +64,7 @@ a{
 }
 
 .input-div{
-  display: flex;
+  flex:1;
   justify-content: center;
 }
 
@@ -196,9 +228,13 @@ footer{
 
 
 .image-box {
-  text-align: center;
+  position: relative;
+  width: 50%;
+  padding: 70%;
+/* 이 부분이 가로 세로 비율을 동일하게 유지합니다 */
   /*width :570px;*/
 }
+
 /* 기존 .box, .box_avatar, .brandName, .name 클래스는 동일하게 유지 */
 
 .box, .box_avatar {
