--- a/my-project2/frontend/src/app/component/community/community.component.css
+++ b/my-project2/frontend/src/app/component/community/community.component.css
@@ -7,6 +7,15 @@ h1{
   text-align: center;
 }
 
+.addButton {
+  text-align: center;
+  border-radius: 12px; /* 테두리 둥글게 */
+  border: solid 1px black; /* 검은색 테두리 */
+  background-color: white; /* 배경색 하얀색 */
+  color: black; /* 글자색 검정색 */
+}
+
+
 .addContents{
   float: left;
 }
@@ -20,6 +29,8 @@ h1{
 .box{
   width: calc(50% - (1px * 2));
   margin-left: 2px;
+
+  position: relative;
 }
 
 .title{
@@ -31,5 +42,26 @@ h1{
 }
 
 .button{
-  text-align: center;
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+
+.overlay-button{
+  margin-left: 5px;
+  margin-right: 5px;
+  position: absolute;
+  transform: translateY(-50%);
+  background-color: none;
+  color: black;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.overlay-button:first-child{
+  left: 0;
+}
+
+.overlay-button:last-child{
+  right: 0;
 }
