--- a/my-project2/frontend/src/app/component/community/community.component.html
+++ b/my-project2/frontend/src/app/component/community/community.component.html
@@ -8,15 +8,16 @@
 <div class="boxes-wrapper">
   <ng-container *ngFor="let post of posts; let postIndex = index">
     <div class="box">
-      <img [src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="d-block w-100"/>
+      <img (click)="goToPost(post.id)" [src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="d-block w-100"/>
       <!-- Previous and Next Buttons -->
       <div class="button">
-        <button (click)="previous(postIndex)" class="overlay-button"></button>
+        <button (click)="previous(postIndex)" class="overlay-button"><</button>
         <button (click)="next(postIndex, post.imagePaths.length)"class="overlay-button">></button>
       </div>
-      <h5>{{ post.username }}</h5>
-      <!-- Post title -->
-      <h7 class="title">{{ post.title }}</h7>
+      <div>
+        <h5>{{ post.username }}</h5>
+        <h7 class="title">{{ post.title }}</h7>
+      </div>
     </div>
   </ng-container>
 </div>
