--- a/my-project2/frontend/src/app/component/community/post/post.component.html
+++ b/my-project2/frontend/src/app/component/community/post/post.component.html
@@ -3,7 +3,7 @@
   <form (ngSubmit)="onSubmit()">
     <!-- 이미지 선택 -->
     <div class="form-group" class="content_image">
-      <label for="imageInput">이미지 선택 (최대 3개) *이미지는 4:5비율을 지향합니다.<br>
+      <label for="imageInput">이미지 선택 (최대 3개) *이미지는 4:5비율을 지향합니다.
       이미지는 수정이 불가하오니 신중하게 업로드 부탁드립니다.</label>
       <br>
       <button type="button" (click)="fileInput.click()">이미지 선택</button>
