--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -6,16 +6,24 @@
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1200px;
+  max-width: 1000px;
 }
+
+
+
 
 .description{
   background-color: white;
-  min-height: 100vh;
+  min-height: calc(100vh - 168px);
   overflow-y: auto;
   width: 100%;
   margin-left: 15px;
   margin-right: 15px;
+}
+
+.app-data{
+  display: flex;
+  width: 100%;
 }
 
 
@@ -40,7 +48,7 @@ a{
   text-align: left;
   top:0;
   height: 6vh;
-  max-height: 60px;
+  max-height: 72px;
   border-bottom: solid 4px black;
   display: flex;
 
@@ -50,13 +58,13 @@ a{
   bottom:0;
   left:0;
   width: 100%;
-  height: 6vh;
+  height: 8vh;
+  max-height: 96px;
   border-top: solid 3px black;
   display: flex;
   justify-content: space-between;
-  max-height: 140px;
   z-index: 1;
-  background-color: white;
+  color: white;
 }
 
 
@@ -83,7 +91,7 @@ a{
 }
 .BottomNavIcon{
   width: 100%;
-  height: calc(100% - 25px);
+  height: calc(100% - 30px);
   object-fit: contain;
 }
 
