--- a/my-project2/frontend/src/app/component/member/signin/signin.component.css
+++ b/my-project2/frontend/src/app/component/member/signin/signin.component.css
@@ -1,12 +1,102 @@
 
-
-.wrapper{
+:host{
   display: flex;
-  min-height: 600px;
   justify-content: center;
-  align-items: center;
+  width:100%;
+  height: 100%;
 
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+}
+.centeralign{
+  position:relative;
+  width: 100%;
+  max-width: 500px;
+
+}
+
+.loginContainer {
+  position: relative;
+  width: 100%;
+  padding-bottom: 90%; /* For a 16:9 aspect ratio */
+  margin-top:30%;
+
+}
+
+.loginBlock {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:100%;
+}
+
+.loginTitle{
+  width: 100%;
+  font-size: large;
+  flex-wrap: wrap;
+}
+.loginForm{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.loginBlock{
+  width: 100%;
+}
+
+
+.inputDiv{
+  width: 100%;
+  margin-bottom: 2em;
+}
+
+
+.inputTextBox{
+
+  width: 100%;
+  height: 2em;
+  font-size: 15px;
+  border: 0;
+  border-bottom: 1px solid black;
+  
+  outline: none;
+  padding-left: 10px;
+  font:black;
+  font-size: 2em;
+
+}
+
+.button{
+
+}
+
+.error{
+  margin-left: 15px;
+}
+
+.inputTextBox:valid{
+}
+
+
+
+.inputName{
+  padding : 10px;
+  font-size: 16px;
+  text-align: left;
+  width: 100%;
+}
+
+
 
 .mat-form-field{
   width: 100%;
@@ -14,10 +104,11 @@
 }
 
 .error{
-  padding: 16px;
-  width: 300px;
-  color: white;
-  background-color: red;
+  position: absolute;
+  text-align: left;
+  width: 100%;
+  color: red;
+  font-size:1em;
 }
 
 .button{
@@ -25,8 +116,13 @@
   justify-content: flex-end;
 }
 
-.button button{
-  margin-right: 8px;
+.loginForm button{
+  padding: 5px;
+  width: 100%;
+  height: 3vh;
+  min-height: 40px;
+  border-radius: calc( 3vh);
+
 }
 
 .kakaoLogin{
