--- a/my-project2/frontend/src/app/component/member/signin/signin.component.html
+++ b/my-project2/frontend/src/app/component/member/signin/signin.component.html
@@ -1,30 +1,32 @@
-<div class="wrapper">
-  <mat-card style="width: 2000px; height: 500px;">
-    <mat-card-title>AvatarS - 로그인</mat-card-title>
-    <mat-card-content>
-      <form [formGroup]="signInForm" (ngSubmit)="submit()">
-        <p>
-          <mat-form-field>
-            <input type="text" matInput placeholder="아이디를 입력해주세요." formControlName="uid">
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-form-field>
-            <input type="password" matInput placeholder="비밀번호를 입력해주세요" formControlName="password">
-          </mat-form-field>
-        </p>
+<div class="centeralign">
+  <div class="loginContainer">
+    <div class="loginBlock">
+    <div class="loginTitle">로그인
+
+    </div>
+    <form class="loginForm" [formGroup]="signInForm" (ngSubmit)="submit()">
+      <div class="inputDiv">
+        <div class="inputName">아이디</div>
+        <input class="inputTextBox" type="text" placeholder="아이디를 입력해주세요." formControlName="uid">
+  
         <p *ngIf="signInForm.get('uid').touched &&signInForm.get('uid').invalid&&signInForm.get('uid').errors.required" class="error">
           아이디를 입력해주세요.
         </p>
+  
+      </div>
+  
+  
+      <div class="inputDiv">
+        <div class="inputName">비밀번호</div>
+        <input class="inputTextBox" type="password" placeholder="비밀번호를 입력해주세요" formControlName="password">
         <p *ngIf="signInForm.get('password').touched&&signInForm.get('password').invalid&&signInForm.get('password').errors.required" class="error">
           비밀번호를 입력해주세요.
         </p>
-        <div class="button">
-          <button type="submit" mat-stroked-button [disabled]="!signInForm.valid">Login</button>
-          <button mat-raised-button color="primary" routerLink="/signup">SignUp</button>
-        </div>
-      </form>
-    </mat-card-content>
-    <br>
-  </mat-card>
+      </div>
+  
+      <button type="submit" [disabled]="!signInForm.valid">로그인</button>
+      <button color="primary" routerLink="/signup">회원 가입</button>
+    </form>
+
+  </div>
 </div>
