--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -52,6 +52,9 @@ a{
   border-bottom: solid 4px black;
   display: flex;
 
+  justify-content: center;
+  align-items: center;
+
 }
 
 #BottomNav{
@@ -64,7 +67,7 @@ a{
   display: flex;
   justify-content: space-between;
   z-index: 1;
-  color: white;
+  background-color: white;
 }
 
 
@@ -132,48 +135,26 @@ footer{
 }
 
 .search-box {
+  background-color: #f2f2f2;
+  border-radius: 50px; /* 둥근 모서리를 만들기 위한 속성 */
   width: 100%;
+  height: 60%;
   display: flex;
-  justify-content: left;
-  align-items: center;
-  margin-top: 7px;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 .search {
-  height: 52px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .searchInput {
   width: 100%;
-  /*width: 1000px;*/
-  height: 30px;
   font-size: 18px;
   border: none;
-  border-bottom: 1px black solid;
+  background-color: transparent;
 }
 
 .search button {
-  font-size: 18px;
   border: none;
-  background-color: black;
-  width: 50px;
-  height: 30px;
-  border-radius: 15px;
-  color: #fff;
-  cursor: pointer;
-}
-
-.search button:hover {
-  font-size: 18px;
-  border: none;
-  background-color: white;
-  width: 50px;
-  height: 30px;
-  border-radius: 15px;
-  color: #fff;
-  cursor: pointer;
+  background-color: transparent;
 }
