프론트임시 업데이트

--- a/my-project2/frontend/src/app/app.component.html
+++ b/my-project2/frontend/src/app/app.component.html
@@ -8,8 +8,7 @@
       
       <div class="search">
         <button [routerLink]="['/search', searchInput]">
-          <a href="https://www.flaticon.com/kr/free-icons/" title="검색 아이콘">검색 아이콘  제작자: Smashicons - Flaticon</a>
-          <img src="/assets/icons/search.png">
+          <img class="search-icon" src="/assets/icons/search.png">
         </button>
       </div>
     </div>
@@ -20,7 +19,6 @@
   <div id="BottomNav" *ngIf="BottomNav">
     <a [routerLink]="['/']" routerLinkActive="router-link-active">
       <div class="NavBox">
-        <a href="https://www.flaticon.com/kr/free-icons/-" title="홈 버튼 아이콘">홈 버튼 아이콘  제작자: Pixel perfect - Flaticon</a>
         <img class=BottomNavIcon src='/assets/icons/home.png'>
         <div class="BottomNavText">홈</div>
       </div>
@@ -34,14 +32,14 @@
     </a>
     <a [routerLink]="['/community']" routerLinkActive="router-link-active">
       <div class="NavBox">
-        <img class=BottomNavIcon src='/assets/clothesSample.png'>
+        <img class=BottomNavIcon src='/assets/icons/community.png'>
         <div class="BottomNavText">커뮤니티</div>
       </div>
     </a>
     <a [routerLink]="['/signin']" routerLinkActive="router-link-active" *ngIf="!signService.isSignIn()">
       <div class="NavBox">
 
-        <img class=BottomNavIcon src='/assets/clothesSample.png'>
+        <img class=BottomNavIcon src='/assets/icons/login.png'>
         <div class="BottomNavText">로그인</div>
       </div>
     </a>
