--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -135,11 +135,12 @@ footer{
 }
 
 .search-box {
-  background-color: #f2f2f2;
+  background-color: #eeeeee;
   border-radius: 50px; /* 둥근 모서리를 만들기 위한 속성 */
   width: 100%;
   height: 60%;
   display: flex;
+  box-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.5);
 }
 
 .search {
@@ -154,7 +155,14 @@ footer{
   background-color: transparent;
 }
 
+.search-icon{
+  width:100%;
+  height: 100%;
+}
+
 .search button {
   border: none;
   background-color: transparent;
+  height: 100%;
 }
+
