--- a/my-project2/frontend/src/app/component/community/post-detail/post-detail.component.html
+++ b/my-project2/frontend/src/app/component/community/post-detail/post-detail.component.html
@@ -5,7 +5,7 @@
     <p class="username">{{post.username}}</p>
   </div>
   <div class="image-container">
-    <img [src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[0]" alt="Post Image">
+    <img crossorigin="anonymous" [src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[0]" alt="Post Image">
   </div>
   <div class="info-container">
     <p class="title1">{{post.title}}</p>
