--- a/my-project2/frontend/src/app/component/member/closet/closet.component.html
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.html
@@ -2,7 +2,7 @@
 <div class="boxes-wrapper">
     <ng-container *ngFor="let post of posts; let postIndex = index">
       <div class="box">
-        <img [src]="'http://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="d-block w-100"/>
+        <img crossorigin="anonymous" [src]="'http://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="d-block w-100"/>
         <div class="button-group">
           <button (click)="previous(postIndex)"><</button>
           <button (click)="next(postIndex, post.imagePaths.length)">></button>
@@ -54,7 +54,7 @@
 <div class="boxes-wrapper">
   <ng-container *ngFor="let item of closetItems">
     <div class="box">
-        <img [src]="item.imageUrl" alt="{{item.name}}의 이미지" class="item-image">
+        <img crossorigin="anonymous" [src]="item.imageUrl" alt="{{item.name}}의 이미지" class="item-image">
         <br>
         <div class="detail">
           <div style="font-weight: bold" class="name">{{ item.name }}</div>
