--- a/my-project2/frontend/src/app/app.component.html
+++ b/my-project2/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app">
   <div *ngIf="TopNav" class="TopNav">
     <a [routerLink]="['/']">
-      <div class="Title">TryOnMe</div>
+      <div class="Title">TryOnMe&nbsp;</div>
     </a>
     <div class="search-box">
       <input type="text" placeholder="검색어를 입력하세요..." [(ngModel)]="searchInput" class="searchInput"/>
