아이콘 추가

--- a/my-project2/frontend/src/app/app.component.html
+++ b/my-project2/frontend/src/app/app.component.html
@@ -25,7 +25,7 @@
     </a>
     <a [routerLink]="['/fitting']" routerLinkActive="router-link-active">
       <div class="NavBox">
-        <img class=BottomNavIcon src='/assets/clothesSample.png'>
+        <img class=BottomNavIcon src='/assets/icons/virtual.png'>
         <div class="BottomNavText">가상피팅</div>
       </div>
     </a>
