--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
@@ -32,7 +32,7 @@
       <div class="overlay">
         <button class="button button-apply" (click)="applyCloth(item.imageUrl)">입히기</button>
         <a [href]="item.buyUrl" target="_blank">
-          <button class="button button-apply">구매처</button>
+          <button class="button button-apply">구매처.</button>
         </a>
       </div>
       <img class="item-image" [src]="item.imageUrl"/>
