--- a/my-project2/frontend/src/app/component/search/search.component.css
+++ b/my-project2/frontend/src/app/component/search/search.component.css
@@ -2,6 +2,11 @@
   display: flex;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .search-container {
   width: 1300px; /* 최소 너비 설정 */
   margin: auto; /* 자동 마진으로 중앙 정렬 */
