--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
@@ -6,7 +6,7 @@
       <img class="preview" id="modelPreview" src='/assets/modelSample.png' alt="모델 예시 이미지 ">
     </div>
     <div id="btn_group">
-      <button class="buttonSet" (click)="imageInput('modelInput')">이미지 불러오기</button>
+      <button class="buttonSet" (click)="imageInput('modelInput')">모델 이미지 선택</button>
     </div>
   </div>
   <div class="fitting-box">
@@ -16,7 +16,7 @@
       <img class="preview" id="clothesPreview" src='/assets/clothesSample.png' alt="의상 이미지">
     </div>
     <div id="btn_group">
-      <button class="buttonSet" (click)="imageInput('clothesInput')">이미지 불러오기</button>
+      <button class="buttonSet" (click)="imageInput('clothesInput')">의상 이미지 선택</button>
     </div>
   </div>
 </div>
