--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -9,16 +9,10 @@
   max-width: 1000px;
 }
 
-
-
-
 .description{
   background-color: white;
-  min-height: calc(100vh - 168px);
-  overflow-y: auto;
+  min-height: 700px;   
   width: 100%;
-  margin-left: 15px;
-  margin-right: 15px;
 }
 
 .app-data{
@@ -26,9 +20,8 @@
   width: 100%;
 }
 
-
 .Title{
-  font-size: 36px;
+  font-size: 32px;
 }
 
 a{
@@ -41,19 +34,27 @@ a{
   position:sticky;
   z-index: 1;
   background-color: white;
+  
+}
+.app-data{
+  display: flex;
+  width: 100%;
 }
 
-
 .TopNav{
+
   text-align: left;
   top:0;
   height: 6vh;
-  max-height: 72px;
-  border-bottom: solid 4px black;
+  margin-top: 3px;
+  margin-left: 3px;
+  
+  max-height: 66px;
+  border-bottom: solid 1px black;
   display: flex;
-
   justify-content: center;
   align-items: center;
+
 
 }
 
@@ -61,11 +62,11 @@ a{
   bottom:0;
   left:0;
   width: 100%;
-  height: 8vh;
-  max-height: 96px;
+  height: 6vh;
   border-top: solid 3px black;
   display: flex;
   justify-content: space-between;
+  max-height: 140px;
   z-index: 1;
   background-color: white;
 }
@@ -80,13 +81,6 @@ a{
   height: 100%;
 }
 
-@media (max-width:480px) {
-  #BottomNav{
-    height: 55px;
-    font-size: 14px;
-  }
-
-}
 
 .NavBox{
   flex:1;
@@ -94,14 +88,19 @@ a{
 }
 .BottomNavIcon{
   width: 100%;
-  height: calc(100% - 30px);
+  height: calc(100% - 36px);
   object-fit: contain;
 }
 
 .BottomNavText{
   color: black;
   text-align: center;
-  font-size:20px;
+  font-size: 24px;
+  height: 30px;
+  white-space: no-wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp : 1; 
 }
 
 
@@ -142,7 +141,6 @@ footer{
   display: flex;
   box-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.5);
 }
-
 .search {
   display: flex;
   justify-content: right;
@@ -154,15 +152,26 @@ footer{
   border: none;
   background-color: transparent;
 }
-
 .search-icon{
   width: auto;
   height: 100%;
   text-align: right;
 }
-
 .search button {
   border: none;
   background-color: transparent;
   height: 100%;
+}
+
+@media (max-width:480px) {
+  #BottomNav{
+    height: 55px;
+    font-size: 14px;
+  }
+
+  .BottomNavText{
+    font-size: 16px;
+  }
+
+
 }
