--- a/my-project2/frontend/src/app/component/community/community.component.html
+++ b/my-project2/frontend/src/app/component/community/community.component.html
@@ -8,11 +8,8 @@
 <div class="boxes-wrapper">
   <ng-container *ngFor="let post of posts; let postIndex = index">
     <div class="box">
-      <img crossorigin="anonymous" (click)="goToPost(post.id)" [src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]" class="d-block w-100" style="max-height: 500px;"/>
-      <!-- Previous and Next Buttons -->
-      <div class="button">
-        <button (click)="previous(postIndex)" class="overlay-button"><</button>
-        <button (click)="next(postIndex, post.imagePaths.length)"class="overlay-button">></button>
+      <div class="ImgFrame">
+        <img class="communityImg" crossorigin="anonymous" (click)="goToPost(post.id)" [src]="'https://tryon-399311.du.r.appspot.com/posts/images/' + post.imagePaths[currentIndices[postIndex]]"/>
       </div>
       <div>
         <h5>{{ post.username }}</h5>
