--- a/my-project2/frontend/src/app/component/member/closet/closet.component.css
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.css
@@ -127,6 +127,13 @@ footer{
   opacity: 0.5;
 }
 
+.styled-button{
+  border: 1px solid black;
+  color: black;
+  background-color: white;
+  border-radius: 5px;
+}
+
 .selected{
   background-color: #222;
 }
@@ -192,7 +199,7 @@ footer{
   max-width: calc(28% - 10px);
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   position: relative;
 
   white-space: nowrap;
