--- a/my-project2/frontend/src/app/component/search/search.component.css
+++ b/my-project2/frontend/src/app/component/search/search.component.css
@@ -68,6 +68,12 @@ select:focus{
   cursor: pointer;
 }
 
+.item-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .search button:hover {
   font-size: 18px;
   border: none;
@@ -82,7 +88,11 @@ select:focus{
 .search-results {
   margin-top: 10px;
   display:flex;
+  flex-direction: column;
+  align-items: center;
+
   flex-wrap:wrap;
+  text-align: center;
 }
 
 .api-result{
@@ -114,4 +124,22 @@ select:focus{
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.pagination {
+  width: 100%;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.pagination button {
+  display: inline-block;
+  background: none;
+  border: none;
+  color: black;
+  margin: 0 5px;
+}
+
+.pagination button.active {
+  font-weight: bold;
 }
