--- a/my-project2/frontend/src/app/component/member/closet/closet.component.css
+++ b/my-project2/frontend/src/app/component/member/closet/closet.component.css
@@ -194,6 +194,14 @@ footer{
   margin-top: 10px;
 }
 
+.boxes-wrapper .box .button-group{
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  font-size: 15px;
+}
+
 .boxes-wrapper .box {
   flex: 0 0 calc(33% - 10px);
   max-width: calc(28% - 10px);
@@ -201,7 +209,6 @@ footer{
   flex-direction: column;
   align-items: center;
   position: relative;
-
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -217,7 +224,7 @@ footer{
 
 .box img {
   width: 99%;
-  height: auto;
+  height: 99%;
   text-align: center;
 }
 
