--- a/my-project2/frontend/src/app/component/result/result.component.html
+++ b/my-project2/frontend/src/app/component/result/result.component.html
@@ -11,7 +11,7 @@
 <div mat-dialog-actions style="display: flex; justify-content: space-between;">
   <div style="display: flex;">
     <button mat-button mat-dialog-actions (click)="downloadImage()">저장하기</button>
-    <button mat-button mat-dialog-actions>구매처</button>
+    <!--<button mat-button mat-dialog-actions>구매처</button>-->
   </div>
   <button mat-button mat-dialog-close>닫기</button>
 </div>
