--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.css
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.css
@@ -30,7 +30,7 @@
   left: 0;
   padding: 10px;
   border-radius: 11%;
-  width: 100%; 
+  width: 100%;
   height: 100%;
   object-fit: fill;
 
@@ -223,7 +223,6 @@ footer{
   align-items: stretch;
 }
 
-
 .image-box {
   position: relative;
   width: 50%;
@@ -242,7 +241,7 @@ footer{
 
 .box img {
   width: 100%;
-  height: auto;
+  height: 90%;
 }
 
 .box_avatar{
