--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
@@ -36,7 +36,7 @@
         </a>
       </div>
       <img class="item-image" [src]="item.imageUrl"/>
-      <div class="brandName">{{ item.brandName }}</div>
+      <div class="brandName">{{ item.brand ? item.brand : '&nbsp;' }}</div>
       <div class="name">{{ item.name }}</div>
     </div>
   </ng-container>
