--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -11,7 +11,7 @@
 
 .description{
   background-color: white;
-  min-height: 700px;
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -46,8 +46,6 @@ a{
   text-align: left;
   top:0;
   height: 6vh;
-  margin-top: 3px;
-  margin-left: 3px;
 
   max-height: 66px;
   border-bottom: solid 1px black;
@@ -62,7 +60,7 @@ a{
   bottom:0;
   left:0;
   width: 100%;
-  height: 6vh;
+  height: 8vh;
   border-top: solid 3px black;
   display: flex;
   justify-content: space-between;
@@ -84,24 +82,30 @@ a{
 
 .NavBox{
   flex:1;
+  width: 100%;
   height: 100%;
 }
-.BottomNavIcon{
+
+.imgBox{
+
   width: 100%;
   height: calc(100% - 36px);
-  object-fit: contain;
+  position: relative;
+}
+
+
+.BottomNavIcon{
+  height: 100%;
+  width: 50%;
 }
 
 .BottomNavText{
   color: black;
   text-align: center;
-  /*font-size: 16px;*/
-  height: 30px;
-  white-space: no-wrap;
+  font-size: 24px;
+  white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
   -webkit-line-clamp : 1;
-  margin-bottom: 5px;
 }
 
 
@@ -164,13 +168,12 @@ footer{
   height: 100%;
 }
 
-/*@media (max-width:480px) {
-  #BottomNav{
-    height: 55px;
+@media (max-width:480px) {
+
+  .imgBox{
+    height: calc(100% - 24px);
+  }
+  .BottomNavText{
     font-size: 14px;
   }
-
-  .BottomNavText{
-    font-size: 30px;
-  }
-}*/
+}
