--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
@@ -8,6 +8,11 @@
     <div id="btn_group">
       <button class="buttonSet" (click)="imageInput('modelInput')">모델 이미지 선택</button>
     </div>
+    <div id="btn_group">
+      기본 모델 선택
+      <button class="buttonSet" (click)="modelDefault('남성')">남성</button>
+      <button class="buttonSet" (click)="modelDefault('여성')">여성</button>
+    </div>
   </div>
   <div class="fitting-box">
     <div class="title">옷 선택</div>
