--- a/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
+++ b/my-project2/frontend/src/app/component/fitting/fitting/fitting.component.html
@@ -46,6 +46,37 @@
     </div>
   </ng-container>
 </div>
+<hr>
+<div class="boxes-wrapper">
+  <div class="citation">
+    <div class="title">
+      참조
+    </div>
+    <ul>
+      <li>
+        VITON-HD_Choi, S., Park, S., Lee, M., & Choo, J. (2021).
+        VITON-HD: High-Resolution Virtual Try-On via Misalignment-Aware Normalization.
+        In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR).
+      
+      </li>
+      <li>
+        Graphonomy_Gong, K., Gao, Y., Liang, X., Shen, X., Wang, M., & Lin, L. (2019). Graphonomy: Universal Human Parsing via Graph Transfer Learning. In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR)
+
+      </li>
+      <li>OpenPose_Cao, Z., Martinez, G.H., Simon, T., Wei, S., & Sheikh, Y.A. (2019). OpenPose: Realtime Multi-Person 2D Pose Estimation using Part Affinity Fields. IEEE Transactions on Pattern Analysis and Machine Intelligence.</li>
+
+      <li>OpenPose_Simon, T., Joo, H., Matthews, I., & Sheikh, Y. (2017). Hand Keypoint Detection in Single Images using Multiview Bootstrapping. In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR).</li>
+    
+      <li>OpenPose_Cao, Z., Simon, T., Wei, S., & Sheikh, Y. (2017). Realtime Multi-Person 2D Pose Estimation using Part Affinity Fields. In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR).</li>
+    
+      <li>OpenPose_Wei, S., Ramakrishna, V., Kanade, T., & Sheikh, Y. (2016). Convolutional pose machines. In Proc. of the IEEE conference on computer vision and pattern recognition (CVPR).</li>
+
+    </ul>
+    <p>
+
+    </p>
+  </div>
+</div>
 <!--<div class="closet-container">
   <div class="cloth">
     <div class="Guide">황세동님의 옷장</div>
