--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -84,21 +84,38 @@ a{
   flex:1;
   width: 100%;
   height: 100%;
+
 }
 
 .imgBox{
-
+  display: flex;  
+  justify-content: center;
   width: 100%;
+  
   height: calc(100% - 36px);
   position: relative;
 }
 
 
 .BottomNavIcon{
+  left: 0;
+  top:0;
+  position: absolute;
   height: 100%;
-  width: 50%;
+  width: 100%;
+}
+.iconDiv{
+  position:relative;
+  padding-bottom: 90%;
+  height: 0;
 }
 
+.imgContainer{
+
+  position:absolute;
+  width: 50%;
+  height: 100%;
+}
 .BottomNavText{
   color: black;
   text-align: center;
