--- a/my-project2/frontend/src/app/app.component.html
+++ b/my-project2/frontend/src/app/app.component.html
@@ -20,8 +20,11 @@
     <a [routerLink]="['/']" routerLinkActive="router-link-active">
       <div class="NavBox">
         <div class="imgBox">
-          
-        <img class=BottomNavIcon src='/assets/icons/home.png'>
+          <div class="imgContainer">
+            <div class="iconDiv">
+              <img class=BottomNavIcon src='/assets/icons/home.png'>
+            </div>
+          </div>
         </div>
         <div class="BottomNavText">홈</div>
       </div>
@@ -29,7 +32,11 @@
     <a [routerLink]="['/fitting']" routerLinkActive="router-link-active">
       <div class="NavBox">
         <div class="imgBox">
-        <img class=BottomNavIcon src='/assets/icons/virtual.png'>
+          <div class="imgContainer">
+            <div class="iconDiv">
+              <img class=BottomNavIcon src='/assets/icons/virtual.png'>
+            </div>
+          </div>
         </div>
         <div class="BottomNavText">가상피팅</div>
       </div>
@@ -37,17 +44,23 @@
     <a [routerLink]="['/community']" routerLinkActive="router-link-active">
       <div class="NavBox">
         <div class="imgBox">
-        <img class=BottomNavIcon src='/assets/icons/community.png'>
-        </div>
-        
+          <div class="imgContainer">
+            <div class="iconDiv">
+                <img class=BottomNavIcon src='/assets/icons/community.png'>
+              </div>
+            </div>        
+          </div>
         <div class="BottomNavText">커뮤니티</div>
       </div>
     </a>
     <a [routerLink]="['/signin']" routerLinkActive="router-link-active" *ngIf="!signService.isSignIn()">
       <div class="NavBox">
         <div class="imgBox">
-          <img class=BottomNavIcon src='/assets/icons/login.png'>
-        
+          <div class="imgContainer">
+            <div class="iconDiv">
+              <img class=BottomNavIcon src='/assets/icons/login.png'>
+            </div>
+            </div>
         </div>
         <div class="BottomNavText">로그인</div>
       </div>
@@ -55,15 +68,24 @@
     <a [routerLink]="['/closet']" routerLinkActive="router-link-active" *ngIf="signService.isSignIn()">
       <div class="NavBox">
         <div class="imgBox">
-          <img class=BottomNavIcon src='/assets/icons/closet.png'>
-        </div>
+          <div class="imgContainer">
+            <div class="iconDiv">
+              <img class=BottomNavIcon src='/assets/icons/closet.png'>
+    
+            </div>
+            </div>
+            </div>
         <div class="BottomNavText">{{ username1 }}의 옷장</div>
       </div>
     </a>
     <a (click)="logout()" *ngIf="signService.isSignIn()">
       <div class="NavBox">
         <div class="imgBox">
-        <img class=BottomNavIcon src='/assets/icons/logout.png'>
+          <div class="imgContainer">
+            <div class="iconDiv">
+              <img class=BottomNavIcon src='/assets/icons/logout.png'>
+            </div>
+          </div>
         </div>
         <div class="BottomNavText">로그아웃</div>
       </div>
