--- a/my-project2/frontend/src/app/app.component.css
+++ b/my-project2/frontend/src/app/app.component.css
@@ -94,6 +94,7 @@ a{
   
   height: calc(100% - 36px);
   position: relative;
+  align-items: center;
 }
 
 
@@ -106,7 +107,7 @@ a{
 }
 .iconDiv{
   position:relative;
-  padding-bottom: 90%;
+  padding-bottom: 70%;
   height: 0;
 }
 
@@ -114,7 +115,7 @@ a{
 
   position:absolute;
   width: 50%;
-  height: 100%;
+  height: 70%;
 }
 .BottomNavText{
   color: black;
